--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "dbmonster-inferno",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "DBMonster Benchmark: Inferno",
   "homepage": "https://github.com/infernojs/dbmonster-inferno",
   "repository": "https://github.com/infernojs/dbmonster-inferno",
@@ -10,21 +10,25 @@
     "email": "sampo.kivisto@live.fi",
     "url": "https://github.com/Havunen"
   },
+  "scripts": {
+    "build": "gulp build",
+    "serve": "gulp serve"
+  },
   "keywords": [
     "Inferno",
     "dbmonster",
     "benchmark"
   ],
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
     "babel-plugin-inferno": "^3.2.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-util": "^3.0.8",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "inferno": "^3",
